[gd_scene load_steps=20 format=3 uid="uid://bsvhxgo10d7pb"]

[ext_resource type="Texture2D" uid="uid://do3lgd7alchfe" path="res://addons/brackeys/sprites/fruit.png" id="1_bhd63"]
[ext_resource type="Script" path="res://scripts/projectile.gd" id="1_h44yj"]
[ext_resource type="AudioStream" uid="uid://bfkku0frjbbmk" path="res://addons/brackeys/sounds/explosion.wav" id="3_fx8us"]
[ext_resource type="Texture2D" uid="uid://boqyysvpomjrb" path="res://addons/bdragon/Red Effect Bullet Impact Explosion 32x32.png" id="3_soh6d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k3rmr"]
atlas = ExtResource("1_bhd63")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_da36d"]
atlas = ExtResource("3_soh6d")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btmr0"]
atlas = ExtResource("3_soh6d")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vmjg"]
atlas = ExtResource("3_soh6d")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj3rf"]
atlas = ExtResource("3_soh6d")
region = Rect2(288, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob8tr"]
atlas = ExtResource("3_soh6d")
region = Rect2(288, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1elc"]
atlas = ExtResource("3_soh6d")
region = Rect2(256, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggeow"]
atlas = ExtResource("3_soh6d")
region = Rect2(224, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_32roj"]
atlas = ExtResource("3_soh6d")
region = Rect2(192, 320, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y2n1g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3rmr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_da36d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btmr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vmjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj3rf")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"explode",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob8tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1elc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggeow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32roj")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"timeout",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3pc0p"]
radius = 6.0

[sub_resource type="Animation" id="Animation_ft1ew"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageArea/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="Animation" id="Animation_o4yuh"]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageArea/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"explode"]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_nfyal"]
resource_name = "timeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DamageArea/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"timeout"]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0etj"]
_data = {
"RESET": SubResource("Animation_ft1ew"),
"explode": SubResource("Animation_o4yuh"),
"timeout": SubResource("Animation_nfyal")
}

[node name="Projectile" type="Node2D"]
script = ExtResource("1_h44yj")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_y2n1g")
autoplay = "default"

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_3pc0p")

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_fx8us")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o0etj")
}

[node name="Timeout" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="area_entered" from="DamageArea" to="." method="_on_damage_area_area_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="Timeout" to="." method="_on_timeout_timeout"]
